Index is TOP-SHOP now , icon-bar update

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@ body {margin:0;}
 <body id="page-top" class="index">
 
 <div class="icon_bar">
-  <a class="active" href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-search"></i></a>
+  <a class="active" href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
   <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
   <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
   <a href="http://joobot-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
@@ -182,44 +182,21 @@ body {margin:0;}
                 <div class="col-lg-12 text-center">
                 <div class="col-lg-12 text-center">
                 	 <p style="padding-top: 10px"></p>
-                    <h2>Smart Search</h2>
+                    <h2>Top-Shop</h2>
                   <!--           <hr class="star-primary"> -->
 					
 <h4>Easy To Shop !</h4>
 
                                    <center><div id="load"></div></center>
 <div id="contents">
- <p style="padding-top: 20px"></p>
-<form method="post" action="/search">
-<p style="padding-top: 20px"><input class="form-control" type="text" name="add" placeholder="Your Item"></p>
-      <!-- icons buttons:
-    <div id="icons">
-<p><input id=ebay class="floating-box img-thumbnail" type="image" src="../static/img/ebay.png" width="48" height="48"></p>
-    <p><input class="floating-box img-thumbnail" type="image" src="../static/img/alii.png"  alt="checkbox" width="48" height="48"></p>
-    <p><input class="floating-box img-thumbnail" type="image" src="../static/img/dealextreame.png"  alt="checkbox" width="48" height="48"></p>
-    <p><input class="floating-box img-thumbnail" type="image" src="../static/img/amazon.jpg"  alt="checkbox" width="48" height="48"></p>
-</div>
- -->
-
-<!--
-<p class="submit" style="width: 200px; height: 65px; display: inline-block;"><input type="submit" id="search" autocomplete="off" data-loading-text="Loading..." value="Search Now" class="btn btn-success btn-block after-box"></p>
--->
-    <p style="padding-top: 10px"></p>
-  <!-- <button style="width: 300px; height: 65px; display: inline-block;" type="submit" id="searchButton" autocomplete="off" data-loading-text="Loading..." class="btn btn-success btn-block after-box">Search Now</button> -->
-<!--
-<button style="width: 300px; height: 65px; display: inline-block;" type="submit" class="btn btn-success btn-lg" id="load" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading ...">Search Now</button>
--->
-<center>
-<div style="text-align:center;">
-<button type="submit" style="width: 200px; height: 65px; display: inline-block;" class="btn btn-info btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i>">Search Now</button>
-</div>
-</center>
-</form>
 
 
 
 
                 </div>
+            </div>
+</div>
+            </div>
             </div>
 
     </section>
