--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -79,7 +79,7 @@ body {margin:0;}
 
 <body id="page-top" class="index">
 <div class="icon_bar">
-  <a  href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-search"></i></a>
+  <a  href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
   <a class="active" href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
   <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
   <a href="http://joobot-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
