favorites table changed

--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -180,7 +180,7 @@ body {margin:0;}
                 <tr>
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
                 <td>{{x[1]}}</td>
-                <td><form method="post" action="http://joobot-web.herokuapp.com/history_results/{{x[0]}}"><button type="submit" name="add" class="btn btn-primary" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Results</button></form></td>
+                <td><form method="post" action="http://joobot-web.herokuapp.com/history_results/{{x[0]}}"><button type="submit" name="add" class="btn btn-info" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Results</button></form></td>
                 <td><form method="post" action="http://joobot-web.herokuapp.com/history/delete/{{x[1]}}"><button type="submit" name="add" class="btn btn-danger" id="{{x[0]}}" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Deleting...">Delete</button></form></td>
              
                 </tr>
