--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -18,6 +18,15 @@
     <!-- Custom CSS -->
     <link href="../static/css/freelancer.css" rel="stylesheet">
 
+ <!-- Products list -->
+        <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../static/css/prettyPhoto.css" rel="stylesheet">
+    <link href="../static/css/price-range.css" rel="stylesheet">
+    <link href="../static/css/animate.css" rel="stylesheet">
+	<link href="../static/css/main.css" rel="stylesheet">
+	<link href="../static/css/responsive.css" rel="stylesheet">
+
     <!-- Custom Fonts -->
     <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -166,39 +175,47 @@ body {margin:0;}
 <h5>Your Favorites Items</h5>
 
 
-                               <center><div id="load"></div></center>
+  <center><div id="load"></div></center>
 <div id="contents">
 
-  <table id="favorites" cellspacing="0" width="100%" class="ui celled table">
-        <tbody>
-        {% for x in list %}
-             <tr>
-                <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
-                <td><b>Price:</b> {{x[1]}}$</td>
-                <td><b>Shipping:</b> {{x[2]}}$</td>
-                <!-- <td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td> -->
-                <td><p>
-                <div class="img-thumbnail">
-		<a href={{x[3]}}>
-		<img border="0" alt="ItemPic" src={{x[4]}} width="120" height="120">
-		</a>
-		</div>
-		</p></td>
-                <td><form method="post" action={{x[3]}}><button type="submit" class="btn btn-primary btn-block" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Opening...">Open in {{ x[5] }}</button></form></td>
-                <td><form method="post" action="http://joobot-web.herokuapp.com/favorites/delete/{{x[6]}}"><button type="submit" class="btn btn-danger btn-block" id="{{ x[0] }}"  data-loading-text="<i class='fa fa-spinner fa-spin '></i> Deleting...">Delete</button></form></td>
+<div class="col-sm-9 padding-right">
+					<div class="features_items"><!--features_items-->
+						 {% for x in list %}
+						<div class="col-sm-4">
+							<div class="product-image-wrapper">
+								<div class="single-products">
+										<div class="productinfo text-center">
+											<img src="{{x[4]}}" alt="" />
+											<h2>{{x[1]}}</h2>
+											<p>{{x[0]}}</p>
+											<a href="{{x[3]}}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Open in {{ x[5] }}</a>
+										</div>
+										<div class="product-overlay">
+											<div class="overlay-content">
+												<h2>{{x[1]}}</h2>
+                                                <p>{{x[0]}}</p>
+												<a href="{{x[3]}}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Open in {{ x[5] }}</a>
+											</div>
+										</div>
+								</div>
+								<div class="choose">
+									<ul class="nav nav-pills nav-justified">
+										<li><a href="http://joobot-web.herokuapp.com/results/add_to_favorites/{{x[6]}}"><i class="fa fa-thumbs-up"></i>Like</a></li>
 
-                </tr>
-        {% endfor %}
-       </tbody>
-    </table>
+									</ul>
 
+								</div>
+							</div>
 
-
+						</div>
+				{% endfor %}
 
                 </div>
+
             </div>
 
     </section>
+
 
 
     <!-- jQuery -->
@@ -313,6 +330,15 @@ function goBack() {
 -->
 <script type="text/javascript" src="jquery.dataTables.js"></script>
 <script type="text/javascript" src="dataTables.dataSourcePlugins.js"></script>
+
+	      <script src="../static/js/jquery.js"></script>
+	<script src="../static/js/bootstrap.min.js"></script>
+	<script src="../static/js/jquery.scrollUp.min.js"></script>
+	<script src="../static/js/price-range.js"></script>
+    <script src="../static/js/jquery.prettyPhoto.js"></script>
+    <script src="../static/js/main.js"></script>
+
+
 
 </body>
 
