--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -200,7 +200,7 @@ body {margin:0;}
 								</div>
 								<div class="choose">
 									<ul class="nav nav-pills nav-justified">
-										<li><a href="http://joobot-web.herokuapp.com/favorites/delete/{{x[6]}}"><i class="fa-trash-o"></i>Delete</a></li>
+										<li><a href="http://joobot-web.herokuapp.com/favorites/delete/{{x[6]}}"><i class="fa fa-trash-o"></i>Delete</a></li>
 
 									</ul>
 
