--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,15 @@
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
+       <!-- Products list -->
+        <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../static/css/prettyPhoto.css" rel="stylesheet">
+    <link href="../static/css/price-range.css" rel="stylesheet">
+    <link href="../static/css/animate.css" rel="stylesheet">
+	<link href="../static/css/main.css" rel="stylesheet">
+	<link href="../static/css/responsive.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="../static/css/freelancer.css" rel="stylesheet">
 
@@ -171,28 +180,75 @@ body {margin:0;}
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <!-- Portfolio Grid Section -->
+        <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                <div class="col-lg-12 text-center">
-                	 <p style="padding-top: 10px"></p>
                     <h2>Top-Shop</h2>
-                  <!--           <hr class="star-primary"> -->
-					
-<h4>Easy To Shop !</h4>
+         <!--           <hr class="star-primary"> -->
 
-                                   <center><div id="load"></div></center>
+<h5>Recommendations For Today </h5>
+
+                   <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Filters
+        </a>
+      </h4>
+    </div>
+
+       <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+      	<!-- <div class="container">
+         <div class="btn-group"> -->
+         <a href="http://joobot-web.herokuapp.com/results/cheap" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>  Low-Cost</a>
+     <a href="http://joobot-web.herokuapp.com/results/freeshipping" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span>  Free Shipping</a>
+     <a href="http://joobot-web.herokuapp.com/results/all" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>  All The Results</a>
+
+ </div>
+       </div>
+                   </div>
+
+
+               <center><div id="load"></div></center>
 <div id="contents">
 
+<div class="col-sm-9 padding-right">
+					<div class="features_items"><!--features_items-->
+						 {% for x in list %}
+						<div class="col-sm-4">
+							<div class="product-image-wrapper">
+								<div class="single-products">
+										<div class="productinfo text-center">
+											<img src="{{x[4]}}" alt="" />
+											<h2>{{x[1]}}</h2>
+											<p>{{x[0]}}</p>
+											<a href="{{x[3]}}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Open in {{ x[5] }}</a>
+										</div>
+										<div class="product-overlay">
+											<div class="overlay-content">
+												<h2>{{x[1]}}</h2>
+                                                <p>{{x[0]}}</p>
+												<a href="{{x[3]}}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Open in {{ x[5] }}</a>
+											</div>
+										</div>
+								</div>
+								<div class="choose">
+									<ul class="nav nav-pills nav-justified">
+										<li><a href="http://joobot-web.herokuapp.com/results/add_to_favorites/{{x[6]}}"><i class="fa fa-thumbs-up"></i>Like</a></li>
 
+									</ul>
 
+								</div>
+							</div>
+
+						</div>
+				{% endfor %}
 
                 </div>
-            </div>
-</div>
-            </div>
+
             </div>
 
     </section>
@@ -273,6 +329,13 @@ function goBack() {
    }, 100000);
 });
 </script>
+
+	      <script src="../static/js/jquery.js"></script>
+	<script src="../static/js/bootstrap.min.js"></script>
+	<script src="../static/js/jquery.scrollUp.min.js"></script>
+	<script src="../static/js/price-range.js"></script>
+    <script src="../static/js/jquery.prettyPhoto.js"></script>
+    <script src="../static/js/main.js"></script>
 
 
 </body>
