--- a/templates/index.html
+++ b/templates/index.html
@@ -188,7 +188,7 @@ body {margin:0;}
                     <h2>Top-Shop</h2>
          <!--           <hr class="star-primary"> -->
 
-<h5>Recommendations For Today </h5>
+<h5>The Best Deals Today !</h5>
 
 
                <center><div id="load"></div></center>
