--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -320,6 +320,14 @@ function goBack() {
    }, 100000);
 });
 </script>
+
+    <script>
+  $('#searchButton').on('click', function () {
+    var $btn = $(this).button('loading')
+    // business logic...
+    $btn.button('reset')
+  })
+</script>
 <!--
     <div class="scroll-top page-scroll visible-xs visible-sm">
         <a class="btn btn-primary" onclick="goBack()">
