--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -111,7 +111,7 @@ body {margin:0;}
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-
+<a class="navbar-toggle" href="http://joobot-web.herokuapp.com/search_page"><i class="fa fa-search" aria-hidden="true"></i></a>
 
              <a class="navbar-brand" href="#page-top">  Shops  </a>
 
