--- a/templates/index.html
+++ b/templates/index.html
@@ -178,6 +178,7 @@ body {margin:0;}
             </div>
             <!-- /.navbar-collapse -->
         </div>
+	    </div>
         <!-- /.container-fluid -->
     </nav>
         <!-- Portfolio Grid Section -->
