--- a/static/css/main.css
+++ b/static/css/main.css
@@ -977,7 +977,7 @@ h2.title {
 }
 
 .choose ul li a {
-  color: #B3AFA8;
+  color: #00BFFF;
   font-family: 'Roboto', sans-serif;
   font-size: 13px;
   padding-left: 0;
@@ -990,7 +990,7 @@ h2.title {
 
 .choose ul li a:hover{
 	background:none;
-	color:#FE980F;
+	color:#00ABFF;
 }
 
 .category-tab {
