--- a/static/css/main.css
+++ b/static/css/main.css
@@ -977,7 +977,7 @@ h2.title {
 }
 
 .choose ul li a {
-  color: #00BFFF;
+  color:#2c3e50;
   font-family: 'Roboto', sans-serif;
   font-size: 13px;
   padding-left: 0;
