--- a/templates/after-signup.html
+++ b/templates/after-signup.html
@@ -41,7 +41,7 @@
     top: 0px;
     position:fixed;
     z-index:9999;
-    background:url("http://2.bp.blogspot.com/-JbBntT9YAY4/ViO_tqgWarI/AAAAAAAAAJk/9Q5Yyg4Hf8g/s1600-r/loading_cart.gif") 50% 50% no-repeat rgb(255,255,255);
+    background:url("../static/img/flickr.gif") 50% 50% no-repeat rgb(255,255,255);
 }
 
 
@@ -52,7 +52,7 @@
 </head>
 
 
-<body id="page-top" class="index" background="../static/img/background2.png" style="background-size: cover; background-repeat: no-repeat">
+<body id="page-top" class="index" background="../static/img/background2.jpg" style="background-size: cover; background-repeat: no-repeat">
 
 
 
@@ -93,11 +93,13 @@
 
 <h5>Easy & Fun Shopping !</h5>
 
+ 
+
                     <div class="alert alert-success">
  <strong>Registration mail sent!</strong> Please verify in your mail box.
 </div>
-
-           <!--   <img src="../static/img/login-pic.png" height="160" width="160"> -->
+			
+                 <!--   <img src="../static/img/login-pic.png" height="160" width="160"> -->
 
                          <img src="../static/img/shops-pic.png" height="160" width="160">
 
@@ -107,7 +109,7 @@
  <!--
  <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
 <!-- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://Joobot-web.heroku.com/login"><input type="submit" value="Sign-In" class="btn btn-success btn-block btn-lg"></p> -->
-     <button type="submit" class="btn btn-block btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Sign-In</button>
+     <button type="submit" class="btn btn-block btn-info btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Sign-In</button>
 </form>
 
 <form action="http://Joobot-web.herokuapp.com/signup">
@@ -121,7 +123,7 @@
 -->
 <form action="http://Joobot-web.herokuapp.com/facebook_login" >
  <p></p>
- <button type="submit" style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In with Facebook</button>
+ <button type="submit" style="background-color:#3B5998; border-color:#3B5998; color:#fff" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In with Facebook</button>
 </form>
  
  <!--
@@ -254,3 +256,6 @@ function goBack() {
 </body>
 
 </html>
+
+
+/
