--- a/static/css/main.css
+++ b/static/css/main.css
@@ -162,13 +162,13 @@ a#scrollUp i{
 }
 
 .usa:hover {
-	background:#FE980F;
+	background:#10CCFF;
 	color:#fff;
-	border-color:#FE980F;
+	border-color:#10CCFF;
 }
 
 .usa:active, .usa.active {
-  background: none repeat scroll 0 0 #FE980F;
+  background: none repeat scroll 0 0 #10CCFF;
   box-shadow: inherit;
   outline: 0 none;
 }
@@ -179,7 +179,7 @@ a#scrollUp i{
 }
 
 .dropdown-menu  li  a:hover, .dropdown-menu  li  a:focus {
-  background-color: #FE980F;
+  background-color: #10CCFF;
   color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
   text-decoration: none;
