--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -1100,12 +1100,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #18bc9c;
+  color: #9EB1D3;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #18bc9c;
+  color: #9EB1D3;
   text-decoration: underline;
 }
 a:focus {
