--- a/templates/index.html
+++ b/templates/index.html
@@ -2,25 +2,20 @@
 <html lang="en">
 
 <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/dataTables.semanticui.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
+ <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
     <title>Shops</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-
-       <!-- Products list -->
-        <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../static/css/prettyPhoto.css" rel="stylesheet">
-    <link href="../static/css/price-range.css" rel="stylesheet">
-    <link href="../static/css/animate.css" rel="stylesheet">
-	<link href="../static/css/main.css" rel="stylesheet">
-	<link href="../static/css/responsive.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="../static/css/freelancer.css" rel="stylesheet">
@@ -34,18 +29,19 @@
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
 
-    <![endif]-->
+        <![endif]-->
+
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <!-- js script for loading button -->
-   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-<style>
+         <link rel="stylesheet" type="text/css" href="../static/DataTables/dataTables.bootstrap.css">
+
+      <style>
 body {margin:0;}
 
 .icon_bar {
-	position: fixed;   
+	position: fixed;
+
 	bottom: 0;
 	width: 100%;
     text-align: center;
@@ -53,7 +49,6 @@ body {margin:0;}
     overflow: auto;
     z-index: 99999;
 }
-
 .icon_bar a {
     width: 20%;
     float: left;
@@ -62,7 +57,6 @@ body {margin:0;}
     color: white;
     font-size: 36px;
 }
-
 .icon_bar a:hover {
     background-color: #01B5F0;
 }
@@ -71,27 +65,8 @@ body {margin:0;}
     background-color: #58D3F7 !important;
 }
 </style>
-    <!-- style tag for icons -->
-    <style>
-.floating-box {
-    float: left;
-    width: 50px;
-    height: 50px;
-    margin: 10px;
-    border: 1px solid #0B2161;
-    display: inline;
-}
 
-.after-box {
-    text-align: center;
-    height: 65px;
-
-
-}
-</style>
-
- <style>#results { color:black;  }
-
+        <style>#results { color:black;  }
         #load{
     width:100%;
     height:100%;
@@ -104,19 +79,18 @@ body {margin:0;}
 
         </style>
 
+
 </head>
 
 <body id="page-top" class="index">
-
 <div class="icon_bar">
-  <a class="active" href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
+  <a  href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
   <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
   <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
   <a href="http://joobot-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
-  <a href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
+  <a class="active" href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
 </div>
-
-     <!-- Navigation -->
+    <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -129,12 +103,13 @@ body {margin:0;}
                 </button>
 
 <a class="navbar-toggle" href="http://joobot-web.herokuapp.com/search_page"><i class="fa fa-search" aria-hidden="true"></i></a>
-         <a class="navbar-brand" href="#page-top">  Shops  </a>
+            <a class="navbar-brand" href="#page-top">  Shops  </a>
 
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
 		    	    <!-- SEARCH -->
 		                     <div class="col-sm-3 col-md-3">
         <form method="post" action="/search" class="navbar-form" role="search">
@@ -145,9 +120,10 @@ body {margin:0;}
             </div>
         </div>
         </form>
-    </div>	    
+    </div>
 		    <!-- END -->
-   <ul class="nav navbar-nav navbar-right">
+
+            <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
@@ -157,7 +133,7 @@ body {margin:0;}
                     <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i>  My-Space</a>
                     </li>
-                    
+
                       <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i>  My Favorites</a>
                     </li>
@@ -178,7 +154,8 @@ body {margin:0;}
         </div>
         <!-- /.container-fluid -->
     </nav>
-        <!-- Portfolio Grid Section -->
+
+       <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
             <div class="row">
@@ -224,24 +201,10 @@ body {margin:0;}
 
     </section>
 
-<script>
-function goBack() {
-    window.history.back();
-}
-</script>
 
-
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <!--
-    <div class="scroll-top page-scroll visible-xs visible-sm">
-        <a class="btn btn-primary" onclick="goBack()">
-            <i class="fa fa-chevron-left"></i>
-        </a>
-    </div>
-</div>
--->
 
     <!-- jQuery -->
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="../static/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
@@ -258,14 +221,48 @@ function goBack() {
 
     <!-- Custom Theme JavaScript -->
     <script src="../static/js/freelancer.js"></script>
-<script type="text/css" >#icons{border:solid 1px red;}.icon{border:solid 1px black; display:inline;}</script>
 
-	 <script type="text/javascript" language="javascript" src="http://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
-                        <script>
-                        $(document).ready(function() {
-                                  $("#results").DataTable();
-                        } );
+
+	 <script type="../static/text/javascript" language="javascript" src="http://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+<script type="../static/text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"
+        <script type="../static/text/javascript" language="javascript" src="http://code.jquery.com/jquery-1.12.3.min.js"
+<script>
+
+$(document).ready(function() {
+
+    // Setup - add a text input to each footer cell
+    $('#results tfoot th').each( function () {
+        var title = $(this).text();
+        $(this).html( '<input type="text" placeholder="Search '+title+'" />' );
+    } );
+
+    // DataTable
+    var table = $('#results').DataTable();
+
+    // Apply the search
+    table.columns().every( function () {
+        var that = this;
+
+        $( 'input', this.footer() ).on( 'keyup change', function () {
+            if ( that.search() !== this.value ) {
+                that
+                    .search( this.value )
+                    .draw();
+            }
+        } );
+    } );
+}
                         </script>
+
+
+
+<script type="text/css">
+    tfoot input {
+        width: 100%;
+        padding: 3px;
+        box-sizing: border-box;
+    }
+</script>
 
 
 <script type="text/javascript">document.onreadystatechange = function () {
@@ -282,8 +279,63 @@ function goBack() {
   }
 }</script>
 
+    <!-- To The Back Page -->
+
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
 
     <script>
+$(document).ready(function(){
+    $('[data-toggle="popover"]').popover();
+});
+</script>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById('myImg');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+    modal.style.display = "block";
+    modalImg.src = this.src;
+    modalImg.alt = this.alt;
+    captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+</script>
+
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '275750752809365',
+      xfbml      : true,
+      version    : 'v2.7'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
+   <script>
   $('#searchButton').on('click', function () {
     var $btn = $(this).button('loading')
     // business logic...
@@ -291,22 +343,14 @@ function goBack() {
   })
 </script>
 
-<script>
-	$('.btn').on('click', function() {
-    var $this = $(this);
-  $this.button('loading');
-    setTimeout(function() {
-       $this.button('reset');
-   }, 100000);
-});
-</script>
-
-	      <script src="../static/js/jquery.js"></script>
-	<script src="../static/js/bootstrap.min.js"></script>
-	<script src="../static/js/jquery.scrollUp.min.js"></script>
-	<script src="../static/js/price-range.js"></script>
-    <script src="../static/js/jquery.prettyPhoto.js"></script>
-    <script src="../static/js/main.js"></script>
+<!--
+    <div class="scroll-top page-scroll visible-xs visible-sm">
+        <a class="btn btn-primary" onclick="goBack()">
+            <i class="fa fa-chevron-left"></i>
+        </a>
+    </div>
+</div>
+-->
 
 
 </body>
