--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
-   <meta charset="utf-8">
+
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/dataTables.semanticui.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
-
     <title>Shops</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
@@ -18,15 +20,15 @@
     <!-- Custom CSS -->
     <link href="../static/css/freelancer.css" rel="stylesheet">
 
- <!-- Products list -->
-        <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Products list -->
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/font-awesome.min.css" rel="stylesheet">
     <link href="../static/css/prettyPhoto.css" rel="stylesheet">
     <link href="../static/css/price-range.css" rel="stylesheet">
     <link href="../static/css/animate.css" rel="stylesheet">
-	<link href="../static/css/main.css" rel="stylesheet">
-	<link href="../static/css/responsive.css" rel="stylesheet">
-
+    <link href="../static/css/main.css" rel="stylesheet">
+    <link href="../static/css/responsive.css" rel="stylesheet">
+    
     <!-- Custom Fonts -->
     <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -41,13 +43,14 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
-         <link rel="stylesheet" type="text/css" href="../static/DataTables/datatables.css">
+         <link rel="stylesheet" type="text/css" href="../static/DataTables/dataTables.bootstrap.css">
+
       <style>
 body {margin:0;}
 
 .icon_bar {
 	position: fixed;
-   
+
 	bottom: 0;
 	width: 100%;
     text-align: center;
@@ -71,8 +74,8 @@ body {margin:0;}
     background-color: #58D3F7 !important;
 }
 </style>
-        <style>#results { color:black;  }
 
+        <style>#results { color:black;  }
         #load{
     width:100%;
     height:100%;
@@ -83,23 +86,19 @@ body {margin:0;}
     background:url("../static/img/flickr.gif") 50% 50% no-repeat rgb(255,255,255);
 }
 
-
-
         </style>
-
 
 
 </head>
 
 <body id="page-top" class="index">
 <div class="icon_bar">
-  <a href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
+  <a  href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
   <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
-  <a class="active" href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
+  <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
   <a href="http://joobot-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
-  <a href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
+  <a class="active" href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
 </div>
-
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -111,15 +110,15 @@ body {margin:0;}
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-<a class="navbar-toggle" href="http://joobot-web.herokuapp.com/search_page"><i class="fa fa-search" aria-hidden="true"></i></a>
 
-             <a class="navbar-brand" href="#page-top">  Shops  </a>
+<a class="navbar-toggle" href="http://joobot-web.herokuapp.com/search_page"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a class="navbar-brand" href="#page-top">  Shops  </a>
 
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		    
+
 		    	    <!-- SEARCH -->
 		                     <div class="col-sm-3 col-md-3">
         <form method="post" action="/search" class="navbar-form" role="search">
@@ -130,9 +129,10 @@ body {margin:0;}
             </div>
         </div>
         </form>
-    </div>	    
+    </div>
 		    <!-- END -->
-                <ul class="nav navbar-nav navbar-right">
+
+            <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
@@ -142,7 +142,7 @@ body {margin:0;}
                     <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i>  My-Space</a>
                     </li>
-                    
+
                       <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i>  My Favorites</a>
                     </li>
@@ -164,7 +164,7 @@ body {margin:0;}
         <!-- /.container-fluid -->
     </nav>
 
-      <!-- Portfolio Grid Section -->
+        <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
             <div class="row">
@@ -213,7 +213,9 @@ body {margin:0;}
 
 
 
+
     <!-- jQuery -->
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="../static/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
@@ -231,39 +233,47 @@ body {margin:0;}
     <!-- Custom Theme JavaScript -->
     <script src="../static/js/freelancer.js"></script>
 
+
 	 <script type="../static/text/javascript" language="javascript" src="http://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
-                        <script>
-                        $(document).ready(function() {
-                                $('#example').DataTable({
-    buttons: [
-        {
-            extend: 'excel',
-            text: 'Save current page',
-            exportOptions: {
-                modifier: {
-                    page: 'current'
-                }
+<script type="../static/text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"
+        <script type="../static/text/javascript" language="javascript" src="http://code.jquery.com/jquery-1.12.3.min.js"
+<script>
+
+$(document).ready(function() {
+
+    // Setup - add a text input to each footer cell
+    $('#results tfoot th').each( function () {
+        var title = $(this).text();
+        $(this).html( '<input type="text" placeholder="Search '+title+'" />' );
+    } );
+
+    // DataTable
+    var table = $('#results').DataTable();
+
+    // Apply the search
+    table.columns().every( function () {
+        var that = this;
+
+        $( 'input', this.footer() ).on( 'keyup change', function () {
+            if ( that.search() !== this.value ) {
+                that
+                    .search( this.value )
+                    .draw();
             }
-        }
-    ]
-} );
-                                $("#favorites").DataTable(
-
-                                        {
-            "columns": [
-                null,
-                null,
-                { "orderDataType": "dom-text" },
-                { "orderDataType": "dom-text", "type": "numeric" },
-                { "orderDataType": "dom-select" },
-                { "orderDataType": "dom-checkbox" }
-            ]
-        }
-
-                                );
-
-                        } );
+        } );
+    } );
+}
                         </script>
+
+
+
+<script type="text/css">
+    tfoot input {
+        width: 100%;
+        padding: 3px;
+        box-sizing: border-box;
+    }
+</script>
 
 
 <script type="text/javascript">document.onreadystatechange = function () {
@@ -288,6 +298,36 @@ function goBack() {
 }
 </script>
 
+    <script>
+$(document).ready(function(){
+    $('[data-toggle="popover"]').popover();
+});
+</script>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById('myImg');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+    modal.style.display = "block";
+    modalImg.src = this.src;
+    modalImg.alt = this.alt;
+    captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+</script>
+
 <script>
   window.fbAsyncInit = function() {
     FB.init({
@@ -306,23 +346,14 @@ function goBack() {
    }(document, 'script', 'facebook-jssdk'));
 </script>
 
-<script>
-	$('.btn').on('click', function() {
-    var $this = $(this);
-  $this.button('loading');
-    setTimeout(function() {
-       $this.button('reset');
-   }, 100000);
-});
-</script>
-
-    <script>
+   <script>
   $('#searchButton').on('click', function () {
     var $btn = $(this).button('loading')
     // business logic...
     $btn.button('reset')
   })
 </script>
+
 <!--
     <div class="scroll-top page-scroll visible-xs visible-sm">
         <a class="btn btn-primary" onclick="goBack()">
@@ -331,16 +362,6 @@ function goBack() {
     </div>
 </div>
 -->
-<script type="text/javascript" src="jquery.dataTables.js"></script>
-<script type="text/javascript" src="dataTables.dataSourcePlugins.js"></script>
-
-	      <script src="../static/js/jquery.js"></script>
-	<script src="../static/js/bootstrap.min.js"></script>
-	<script src="../static/js/jquery.scrollUp.min.js"></script>
-	<script src="../static/js/price-range.js"></script>
-    <script src="../static/js/jquery.prettyPhoto.js"></script>
-    <script src="../static/js/main.js"></script>
-
 
 
 </body>
