--- a/templates/index.html
+++ b/templates/index.html
@@ -93,11 +93,11 @@ body {margin:0;}
 
 <body id="page-top" class="index">
 <div class="icon_bar">
-  <a  href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
+  <a class="active" href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i></a>
   <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
   <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
   <a href="http://joobot-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
-  <a class="active" href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
+  <a  href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
 </div>
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
