--- a/templates/after-signup.html
+++ b/templates/after-signup.html
@@ -101,7 +101,7 @@
 			
                  <!--   <img src="../static/img/login-pic.png" height="160" width="160"> -->
 
-                         <img src="../static/img/shops-pic.png" height="160" width="160">
+                         <img src="../static/img/shops.png" height="160" width="160">
 
  <form method="post" action="/login" style="display: inline;" >
          <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email" ></p>
