--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -137,7 +137,7 @@ body {margin:0;}
                         <a href="#page-top"></a>
                     </li>
                        <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/joobot"><i class="glyphicon glyphicon-search"></i>  Smart-Search</a>
+                       <a href="http://joobot-web.herokuapp.com/joobot"><i class="fa fa-arrow-up"></i>  Top-Shop</a>
                     </li>
                     <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i>  My-Space</a>
