--- a/templates/results.html
+++ b/templates/results.html
@@ -373,6 +373,18 @@ span.onclick = function() {
     $btn.button('reset')
   })
 </script>
+			
+
+
+<script>
+	$('.btn').on('click', function() {
+    var $this = $(this);
+  $this.button('loading');
+    setTimeout(function() {
+       $this.button('reset');
+   }, 100000);
+});
+</script>
 
 <!--
     <div class="scroll-top page-scroll visible-xs visible-sm">
