--- a/templates/results.html
+++ b/templates/results.html
@@ -206,7 +206,7 @@ body {margin:0;}
 							<div class="product-image-wrapper">
 								<div class="single-products">
 										<div class="productinfo text-center">
-											<img src="{{x[4]}}" alt="" />
+											<a href={{x[3]}}><img src="{{x[4]}}" alt="" /></a>
 											<h2>{{x[1]}}$</h2>
 											<p>{{x[0]}}</p>
 											<a href="{{x[3]}}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Open in {{ x[5] }}</a>
