--- a/templates/market.html
+++ b/templates/market.html
@@ -320,7 +320,7 @@ span.onclick = function() {
 
    <script>
   $('#searchButton').on('click', function () {
-    var $btn = $(this).button('loading')
+    var $btn = $(this).button('Loading')
     // business logic...
     $btn.button('reset')
   })
