--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -348,7 +348,7 @@ span.onclick = function() {
 
    <script>
   $('#searchButton').on('click', function () {
-    var $btn = $(this).button('loading')
+    var $btn = $(this).button('Loading')
     // business logic...
     $btn.button('reset')
   })
@@ -359,7 +359,7 @@ span.onclick = function() {
 <script>
 	$('.btn').on('click', function() {
     var $this = $(this);
-  $this.button('loading');
+  $this.button('Loading');
     setTimeout(function() {
        $this.button('reset');
    }, 100000);
