--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -267,7 +267,7 @@ function goBack() {
 <script>
 	$('.btn').on('click', function() {
     var $this = $(this);
-  $this.button('loading');
+  $this.button('Loading');
     setTimeout(function() {
        $this.button('reset');
    }, 100000);
