--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -215,11 +215,22 @@ function goBack() {
 
 <script>
   $('#loginButton').on('click', function () {
-    var $btn = $(this).button('loading')
+    var $btn = $(this).button('Loading')
     // business logic...
     $btn.button('reset')
   })
 </script>
+
+<script>
+	$('.btn').on('click', function() {
+    var $this = $(this);
+  $this.button('Loading');
+    setTimeout(function() {
+       $this.button('reset');
+   }, 100000);
+});
+</script>
+
 
 </body>
 
