Revert "changed l to L"
This reverts commit c32afceab13340dd76b78e085b7a7893984d26d4.

--- a/templates/joobot-login-failed.html
+++ b/templates/joobot-login-failed.html
@@ -228,7 +228,7 @@ function goBack() {
 
 <script>
   $('#loginButton').on('click', function () {
-    var $btn = $(this).button('Loading')
+    var $btn = $(this).button('loading')
     // business logic...
     $btn.button('reset')
   })
@@ -236,7 +236,7 @@ function goBack() {
 
     <script>
   $('#searchButton').on('click', function () {
-    var $btn = $(this).button('Loading')
+    var $btn = $(this).button('loading')
     // business logic...
     $btn.button('reset')
   })
@@ -245,7 +245,7 @@ function goBack() {
 <script>
 	$('.btn').on('click', function() {
     var $this = $(this);
-  $this.button('Loading');
+  $this.button('loading');
     setTimeout(function() {
        $this.button('reset');
    }, 100000);
