--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -215,22 +215,11 @@ function goBack() {
 
 <script>
   $('#loginButton').on('click', function () {
-    var $btn = $(this).button('Loading')
+    var $btn = $(this).button('loading')
     // business logic...
     $btn.button('reset')
   })
 </script>
-
-<script>
-	$('.btn').on('click', function() {
-    var $this = $(this);
-  $this.button('Loading');
-    setTimeout(function() {
-       $this.button('reset');
-   }, 100000);
-});
-</script>
-
 
 </body>
 
