--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -351,7 +351,7 @@ span.onclick = function() {
 <script>
 	$('.btn').on('click', function() {
     var $this = $(this);
-  $this.button('Loading');
+  $this.button('loading');
     setTimeout(function() {
        $this.button('reset');
    }, 100000);
