--- a/templates/index.html
+++ b/templates/index.html
@@ -346,7 +346,7 @@ span.onclick = function() {
 
    <script>
   $('#searchButton').on('click', function () {
-    var $btn = $(this).button('Loading')
+    var $btn = $(this).button('loading')
     // business logic...
     $btn.button('reset')
   })
@@ -357,7 +357,7 @@ span.onclick = function() {
 <script>
 	$('.btn').on('click', function() {
     var $this = $(this);
-  $this.button('Loading');
+  $this.button('loading');
     setTimeout(function() {
        $this.button('reset');
    }, 100000);
