--- a/templates/joobot-login.html
+++ b/templates/joobot-login.html
@@ -223,7 +223,7 @@ function goBack() {
 
 <script>
   $('#loginButton').on('click', function () {
-    var $btn = $(this).button('Loading')
+    var $btn = $(this).button('loading')
     // business logic...
     $btn.button('reset')
   })
@@ -231,7 +231,7 @@ function goBack() {
 
     <script>
   $('#searchButton').on('click', function () {
-    var $btn = $(this).button('Loading')
+    var $btn = $(this).button('loading')
     // business logic...
     $btn.button('reset')
   })
@@ -240,7 +240,7 @@ function goBack() {
 <script>
 	$('.btn').on('click', function() {
     var $this = $(this);
-  $this.button('Loading');
+  $this.button('loading');
     setTimeout(function() {
        $this.button('reset');
    }, 100000);
