--- a/templates/results.html
+++ b/templates/results.html
@@ -379,7 +379,7 @@ span.onclick = function() {
 <script>
 	$('.btn').on('click', function() {
     var $this = $(this);
-  $this.button('Loading');
+  $this.button('loading');
     setTimeout(function() {
        $this.button('reset');
    }, 100000);
