--- a/templates/sent_new_pass.html
+++ b/templates/sent_new_pass.html
@@ -244,7 +244,7 @@ function goBack() {
 <script>
 	$('.btn').on('click', function() {
     var $this = $(this);
-  $this.button('Loading');
+  $this.button('loading');
     setTimeout(function() {
        $this.button('reset');
    }, 100000);
