--- a/templates/sent_new_pass.html
+++ b/templates/sent_new_pass.html
@@ -52,7 +52,7 @@
 </head>
 
 
-<body id="page-top" class="index" background="../static/img/background2.png" style="background-size: cover; background-repeat: no-repeat">
+<body id="page-top" class="index" background="../static/img/background2.jpg" style="background-size: cover; background-repeat: no-repeat">
 
 
 
@@ -93,13 +93,15 @@
 
 <h5>Easy & Fun Shopping !</h5>
 
+ 
+
                     <div class="alert alert-success">
- <strong>Reset password mail sent!</strong> Please open your mail box.
+ <strong>A link for reset password has been sent!</strong> Please verify in your mail box.
 </div>
+			
+                 <!--   <img src="../static/img/login-pic.png" height="160" width="160"> -->
 
-                     <!--   <img src="../static/img/login-pic.png" height="160" width="160"> -->
-
-                         <img src="../static/img/shops-pic.png" height="160" width="160">
+                         <img src="../static/img/shops.png" height="160" width="160">
 
  <form method="post" action="/login" style="display: inline;" >
          <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email" ></p>
@@ -107,7 +109,7 @@
  <!--
  <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
 <!-- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://Joobot-web.heroku.com/login"><input type="submit" value="Sign-In" class="btn btn-success btn-block btn-lg"></p> -->
-     <button type="submit" class="btn btn-block btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Sign-In</button>
+     <button type="submit" class="btn btn-block btn-info btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Sign-In</button>
 </form>
 
 <form action="http://Joobot-web.herokuapp.com/signup">
@@ -121,7 +123,7 @@
 -->
 <form action="http://Joobot-web.herokuapp.com/facebook_login" >
  <p></p>
- <button type="submit" style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In with Facebook</button>
+ <button type="submit" style="background-color:#3B5998; border-color:#3B5998; color:#fff" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In with Facebook</button>
 </form>
  
  <!--
@@ -254,3 +256,6 @@ function goBack() {
 </body>
 
 </html>
+
+
+/
